syntax = "proto3";

package stats.service.dashboard;

option java_package = "ru.practicum.ewm.stats.proto";
option java_multiple_files = true;

message UserPredictionsRequestProto {
  int32 user_id = 1;
  int32 max_results = 2;
}

message SimilarEventsRequestProto {
  int32 event_id = 1;
  int32 user_id = 2;
  int32 max_results = 3;
}

message InteractionsCountRequestProto {
  repeated int32 event_id = 1;
}

message RecommendedEventProto {
  int32 event_id = 1;
  double score = 2;
}